Fix Fun title display on mobile

--- a/src/assets/css/_intro.scss
+++ b/src/assets/css/_intro.scss
@@ -48,6 +48,12 @@ img.responsive-hide {
   }
 }
 
+.responsive-show {
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
 .read-more-hide {
   display: none;
 }
